Update of portfolio

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,17 @@
-# Copy this file to `.env.local` and fill in your EmailJS credentials.
+# Copy this file to `.env.local` and fill in your credentials.
 # Restart the dev server after creating/updating .env files.
 
+# EmailJS (Contact form)
 VITE_EMAILJS_PUBLIC_KEY=sMHKUh0rNd0zR2Mx1
 VITE_EMAILJS_SERVICE_ID=service_rit4obl
 VITE_EMAILJS_TEMPLATE_ID=template_fnkekjh
+
+# Firebase Configuration (For visitor counter and analytics)
+# Get these from: Firebase Console > Project Settings > Your apps > SDK setup and configuration
+VITE_FIREBASE_API_KEY=your-api-key-here
+VITE_FIREBASE_AUTH_DOMAIN=your-project-id.firebaseapp.com
+VITE_FIREBASE_DATABASE_URL=https://your-project-id-default-rtdb.firebaseio.com
+VITE_FIREBASE_PROJECT_ID=your-project-id
+VITE_FIREBASE_STORAGE_BUCKET=your-project-id.appspot.com
+VITE_FIREBASE_MESSAGING_SENDER_ID=your-sender-id
+VITE_FIREBASE_APP_ID=your-app-id
