Contact form updation

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,8 @@
 # Copy this file to `.env.local` and fill in your credentials.
 # Restart the dev server after creating/updating .env files.
 
-# EmailJS (Contact form)
-VITE_EMAILJS_PUBLIC_KEY=sMHKUh0rNd0zR2Mx1
-VITE_EMAILJS_SERVICE_ID=service_rit4obl
-VITE_EMAILJS_TEMPLATE_ID=template_fnkekjh
+# Web3Forms (Contact form) - Get your key from https://web3forms.com
+VITE_WEB3FORMS_ACCESS_KEY=your_access_key_here
 
 # Firebase Configuration (For visitor counter and analytics)
 # Get these from: Firebase Console > Project Settings > Your apps > SDK setup and configuration
