--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "react": "^18.2.0",
     "react-devicons": "^2.16.2",
     "react-dom": "^18.2.0",
-    "react-icons": "^5.5.0"
+    "react-github-calendar": "^5.0.0",
+    "react-icons": "^5.5.0",
+    "react-tooltip": "^5.30.0"
   },
   "devDependencies": {
     "@types/node": "^24.3.0",
@@ -31,6 +33,6 @@
     "postcss": "^8.4.27",
     "tailwindcss": "^3.3.3",
     "typescript": "^5.0.2",
-    "vite": "^4.4.5"
+    "vite": "^7.2.6"
   }
 }
