--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^18.2.0",
     "react-github-calendar": "^5.0.0",
     "react-icons": "^5.5.0",
+    "react-router-dom": "^7.10.1",
     "react-tooltip": "^5.30.0"
   },
   "devDependencies": {
