Modified the style

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "notebook-portfolio",
+  "name": "stealth-protocol-portfolio",
   "private": true,
   "version": "0.0.0",
   "type": "module",
